# poetry-run-actions

./: README.md  pyproject.toml
.agents/rules/: python.md  testing.md
.claude/rules/: python.md  testing.md
.codex/skills/deslop-writing/: SKILL.md
.codex/skills/python-error-handling/: SKILL.md
.cursor/rules/: python.mdc
.github/actions/setup-python-poetry/: action.yml
.github/scripts/: agent_sync.py
.github/workflows/: publish-to-pypi.yml  run_tests.yml
poetry_run_actions/: __init__.py  plugin.py  utils.py
tests/: conftest.py
tests/unit/: _helpers.py  helpers.py  test_on_command_execution.py  test_on_command_skip.py  test_plugin.py  test_python_module_target.py  test_resolve_target_entry.py
