[project]
name = "poetry-run-actions"
version = "0.0.2"
description = "Poetry application plugin that runs declarative shell actions before `poetry run <name>` based on the active environment."
authors = [
    { name = "Julien Kmec", email = "me@julien.dev" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "poetry>=2.0",
]

[project.urls]
Repository = "https://github.com/julien777z/poetry-run-actions"

[project.entry-points."poetry.application.plugin"]
poetry-run-actions = "poetry_run_actions.plugin:RunActionsPlugin"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "coverage>=7.8.0",
]

[tool.black]
line-length = 110
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 110

[tool.poetry]
packages = [
    {include = "poetry_run_actions"},
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
